--- a/index.html
+++ b/index.html
@@ -5,26 +5,17 @@
     <title>😬 Personal Site</title>
   </head>
   <body>
-    <table cellspacing="20">
-      <tr>
-        <td><img src="asen.jpg" alt="Asen's Image"></td>
-        <td><h1>Asen Grozdanov</h1>
-      	<p>
-          <em>
-            <a href="https://montreal.cegepgim.ca/">Teacher</a>
-            and <strong>Father</strong></em>
-        </p>
-    		<p>My brief Bio</p></td>
-      </tr>
-    </table>
-
-<!--<img src="asen.jpg" alt="Asen's Image">
-    <h1>Asen Grozdanov</h1>
-		<p><em><a href="https://montreal.cegepgim.ca/">Teacher</a> and <strong>Father</strong></em></p>
-		<p>My brief Bio</p>
--->
-
-    <hr>
+	<table cellspacing="20">
+		<tr>
+			<td><img src="asen.jpg" alt="Asen's Image"></td>
+			<td><h1>Asen Grozdanov</h1>
+				<p><em><a href="https://montreal.cegepgim.ca/">Teacher</a> and <strong>Father</strong></em></p>
+				<p>My brief Bio</p>				
+			</td>
+		</tr>	
+	</table>
+	<br>
+	<hr>
     <h3>Education :</h3>
 		<ul>
 		  <li>book one</li>
@@ -34,59 +25,52 @@
 		<ol>
 		  <li>Hiking</li>
 		  <li>Running</li>
-		</ol>
-    <h3><a href="other.html">Other :</a></h3>
-
-    <hr>
-      <h3>My Experience</h3>
-        <p>2010-2013 Developer</p>
-        <p>2014 Infrastructure Specialist</p>
-
-    <br>
-    <hr>
-      <h3>My Experience</h3>
-      <table>
-        <thead>
-          <tr>
-            <th>Dates</th>
-            <th>Title</th>
-            <th>Test</th>
-          </tr>
-        </thead>
-        <tr>
-          <td>2010-2013</td>
-          <td>Developer</td>
-        </tr>
-        <tr>
-          <td>2014</td>
-          <td>Infrastructure Specialist</td>
-        </tr>
-      </table>
-
-      <br>
-      <hr>
-        <h3>My Experience</h3>
-        <table border="1">
-          <thead>
-            <tr>
-              <th>Dates</th>
-              <th>Title</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>2010-2013</td>
-              <td>Developer</td>
-            </tr>
-            <tr>
-              <td>2014</td>
-              <td>Infrastructure Specialist</td>
-            </tr>
-          </tbody>
-          <tfoot>
-
-          </tfoot>
-        </table>
-
-	</body>
+		</ol>	
+	<h3>Experience :</h3>
+	<table border="1"> <!-- everything in between the tag - 
+						the content of the actual table. 
+						no style applied by the browser, by default -->
+		<!-- This section - 2.1. -->
+		<thead>
+			<tr>
+				<th>Dates</th>
+				<th>Work</th>
+			</tr>		
+		</thead>
+		<!-- This section - 2.2. -->
+		<tbody>
+			<tr>
+				<td>2010-2013</td>
+				<td>Developer</td
+			</tr>		
+			<tr>
+				<td>2014</td>
+				<td>Infra- Specialist</td
+			</tr>
+		</tbody>
+		<tfoot>
+		
+		</tfoot>		
+	</table>
+	<br>
+	<h3>
+	<a href="\\172.16.0.20\homes\admin\Source1\AEC\Web Technologies - MAD\others.txt">Skills :</a>
+	</h3>
+	<table>
+		<tbody>
+			<tr>
+				<td>Infrastructure Specialist</td>
+				<td>⭐⭐⭐⭐⭐</td>
+			</tr>
+			<tr>
+				<td>Web- Development Development</td>
+				<td>⭐⭐⭐</td
+			</tr>	
+			<tr>
+				<td>Mobile Development Development</td>
+				<td>⭐</td
+			</tr>			
+		</tbody>
+	</table>
+  </body>
 </html>
