--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 	</table>
 	<br>
 	<h3>
-	<a href="\\172.16.0.20\homes\admin\Source1\AEC\Web Technologies - MAD\others.txt">Skills :</a>
+	<a href="others.txt">Skills :</a>
 	</h3>
 	<table>
 		<tbody>
