--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="utf-8">
     <title>😬 Personal Site</title>
   </head>
-  <body>
+  <body style="background-color: yellow;">
 	<table cellspacing="20">
 		<tr>
-			<td><img src="asen.jpg" alt="Asen's Image"></td>
-			<td><h1>Asen Grozdanov</h1>
+			<td><img src="user.png" alt="User's Image"></td>
+			<td><h1>The User</h1>
 				<p><em><a href="https://montreal.cegepgim.ca/">Teacher</a> and <strong>Father</strong></em></p>
-				<p>My brief Bio</p>				
+				<p>My brief Bio</p>
 			</td>
-		</tr>	
+		</tr>
 	</table>
 	<br>
 	<hr>
@@ -25,36 +25,36 @@
 		<ol>
 		  <li>Hiking</li>
 		  <li>Running</li>
-		</ol>	
+		</ol>
 	<h3>Experience :</h3>
-	<table border="1"> <!-- everything in between the tag - 
-						the content of the actual table. 
+	<table border="1"> <!-- everything in between the tag -
+						the content of the actual table.
 						no style applied by the browser, by default -->
 		<!-- This section - 2.1. -->
 		<thead>
 			<tr>
 				<th>Dates</th>
 				<th>Work</th>
-			</tr>		
+			</tr>
 		</thead>
 		<!-- This section - 2.2. -->
 		<tbody>
 			<tr>
 				<td>2010-2013</td>
 				<td>Developer</td
-			</tr>		
+			</tr>
 			<tr>
 				<td>2014</td>
 				<td>Infra- Specialist</td
 			</tr>
 		</tbody>
 		<tfoot>
-		
-		</tfoot>		
+
+		</tfoot>
 	</table>
 	<br>
 	<h3>
-	<a href="others.html">Skills :</a>
+	<a href="others.txt">Skills :</a>
 	</h3>
 	<table>
 		<tbody>
@@ -65,11 +65,11 @@
 			<tr>
 				<td>Web- Development Development</td>
 				<td>⭐⭐⭐</td
-			</tr>	
+			</tr>
 			<tr>
 				<td>Mobile Development Development</td>
 				<td>⭐</td
-			</tr>			
+			</tr>
 		</tbody>
 	</table>
   </body>
