--- a/others.html
+++ b/others.html
@@ -13,22 +13,27 @@
     <hr>
     <br>
 
-    <form class="" action="mailto:agrozdanov@cegepgim.ca" method="post">
-		<label>Your Name:</label><br>
-		<input type="text" name="" value="">,<br>
-		<br>
-		<label>Your Email :</label>
-		<input type="email" name="" value=""><br>
-		<br>
-		<label>Your message :</label>
-		<textarea name="name" rows="10" cols="30"></textarea>
-		<input type="submit" name="">
-	</form>
+    <form class="" action="index.txt" method="post">
+  		<label>Your Name:</label>
+  		<input type="text" name="" value="">
+  		<input type="checkbox" name="" value="">
+  		<input type="submit" name="">
+  		<br>
+  		<br>
+  		<label>Password :</label>
+  		<input type="password" name="" value="">
+  		<input type="submit" name="">
+  		<br>
+  		<br>
+  		<label>Do you want to sign up to the email list ?</label>
+  		<input type="checkbox" name="" value="">
+  		<input type="submit" name="">
+	 </form>
 
-  <br>
-  <hr>
-  <br>
-  <form>
+   <br>
+   <hr>
+   <br>
+   <form>
 		<input type="text"><br>
 		<input type="submit"><br>
 		<input type="file" value="Choose file"><br>
@@ -50,7 +55,16 @@
 		<label>Your message :</label>
 		<textarea name="yourMessage" rows="10" cols="30"></textarea>
 		<input type="submit" name="">
-  </form>
+	</form>
+
+  <br>
+  <hr>
+  <br>
+  <video controls width="500">
+    <source src="c:\02. Intro to LaTeX.mp4" type="video/mp4">
+    <p>Sorry, your browser doesn't support embedded videos, here is
+		a <a href="02. Intro to LaTeX.mp4">link to the video</a> instead.</p>
+  </video>
 
   </body>
 </html>
