--- a/others.html
+++ b/others.html
@@ -14,7 +14,7 @@
 	<br>
 	<hr>
 	<br>
-	<form class="" action="index.txt" method="post">
+	<form class="" action="index.html" method="post">
 		<label>Your Name:</label>
 		<input type="text" name="" value="">
 		<input type="checkbox" name="" value="">
