--- a/index.html
+++ b/index.html
@@ -3,8 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>😬 Personal Site</title>
+	<style>
+		body {
+			background-color: powderblue;
+		}
+		hr {
+			background-color: black;
+			border-style: none;
+		}
+	</style>
   </head>
-  <body style="background-color: yellow;">
+  <body>
 	<table cellspacing="20">
 		<tr>
 			<td><img src="user.png" alt="User's Image"></td>
@@ -54,7 +63,7 @@
 	</table>
 	<br>
 	<h3>
-	<a href="others.html">Skills :</a>
+	<a href="\\172.16.0.20\homes\admin\Source1\AEC\Web Technologies - MAD\others.txt">Skills :</a>
 	</h3>
 	<table>
 		<tbody>
