--- a/others.html
+++ b/others.html
@@ -2,35 +2,69 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Others</title>
-	<link rel="stylesheet" href="css\styles.css">
+    <title>Other</title>
   </head>
   <body>
-	<h3>From "index.html"</h3>
     <ol>
       <li>Driving</li>
       <li>Walking</li>
     </ol>
-	<br>
-	<hr>
-	<br>
-	<form class="" action="index.html" method="post">
-		<label>Your Name:</label>
-		<input type="text" name="" value="">
-		<input type="checkbox" name="" value="">		
-		<input type="submit" name="">
+    <br>
+    <hr>
+    <br>
+
+    <form class="" action="index.html" method="post">
+  		<label>Your Name:</label>
+  		<input type="text" name="" value="">
+  		<input type="checkbox" name="" value="">
+  		<input type="submit" name="">
+  		<br>
+  		<br>
+  		<label>Password :</label>
+  		<input type="password" name="" value="">
+  		<input type="submit" name="">
+  		<br>
+  		<br>
+  		<label>Do you want to sign up to the email list ?</label>
+  		<input type="checkbox" name="" value="">
+  		<input type="submit" name="">
+	 </form>
+
+   <br>
+   <hr>
+   <br>
+   <form>
+		<input type="text"><br>
+		<input type="submit"><br>
+		<input type="file" value="Choose file"><br>
+		<input type="date"><br>
+		<input type="radio"><br>
+		<input type="range"><br>
+	</form>
+
+  <br>
+  <hr>
+  <br>
+  <form class="" action="mailto:agrozdanov@cegepgim.ca" method="post" enctype="text/plain">
+		<label>Your Name:</label><br>
+		<input type="text" name="yourName" value="">,<br>
 		<br>
+		<label>Your Email :</label>
+		<input type="email" name="yourEmail" value=""><br>
 		<br>
-		<label>Password :</label>
-		<input type="password" name="" value="">	
-		<input type="submit" name="">
-		<br>
-		<br>
-		<label>Do you want to sign up to the email list ?</label>		
-		<input type="checkbox" name="" value="">		
+		<label>Your message :</label>
+		<textarea name="yourMessage" rows="10" cols="30"></textarea>
 		<input type="submit" name="">
 	</form>
-			
+
+  <br>
+  <hr>
+  <br>
+  <video controls width="500">
+    <source src="c:\02. Intro to LaTeX.mp4" type="video/mp4">
+    <p>Sorry, your browser doesn't support embedded videos, here is
+		a <a href="02. Intro to LaTeX.mp4">link to the video</a> instead.</p>
+  </video>
+
   </body>
 </html>
-
