--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Contact Me</title>
+    <title><!--Contact Me--></title>
   </head>
   <body>
     <form class="" action="mailto:agrozdanov@cegepgim.ca" method="post" enctype="text/plain">
